--- a/app/style/base/ui/_textfield.scss
+++ b/app/style/base/ui/_textfield.scss
@@ -1,61 +1,146 @@
 @use "../../abstracts" as *;
 
-.textfield {
+.chat-box {
   max-width: 78.4rem;
   margin: 0 auto;
   width: 100%;
-  border-radius: 999rem;
+  border-radius: 2rem;
   background-color: $dark-gray;
   box-shadow: 0px 6px 20px 0px rgba($color: $black, $alpha: 0.4);
-  overflow: hidden;
-  height: auto;
-  padding: 0;
-  height: auto;
-  max-width: 78.4rem;
   max-height: 28.2rem;
+  height: auto;
+  min-height: 0;
+  padding: 0 1.2rem;
+  position: relative;
+  @include flex(space-between, center, column);
 
-  @include flex(space-between, center, row, 1.2rem);
-  &.changed {
-    border-radius: 2rem;
-    flex-wrap: wrap;
-    padding:1.2rem;
-    .textfield__textarea {
-      order: 1;
-      width: 100%;
-      flex: unset;
-    }
-    .icons {
-      &--plus {
-        background-color: $gray-900;
-        order: 2;
+  &.has-image {
+    padding-bottom: 1.2rem;
+    .textfield {
+      textarea {
+        bottom: 2.4rem;
+        padding: 0 7.2rem;
       }
-      &--send {
-        background-color: $purple;
-        order: 3;
-        cursor: pointer;
+    }
+    .chat-box__actions {
+      width: 100%;
+      // background-color: $dark-gray;
+      .icons {
+        &--plus {
+          background-color: $gray-500;
+          cursor: pointer;
+        }
+        &--send {
+          background-color: $purple;
+          cursor: pointer;
+        }
       }
     }
   }
-  &__textarea {
-    order: 2;
+  &.has-value {
+    gap: 1.2rem;
+    border-radius: 2rem;
+    padding-bottom: 1.2rem;
+    .textfield {
+      textarea {
+        position: relative;
+        left: unset;
+        bottom: unset;
+        padding: unset;
+      }
+    }
+    .chat-box__actions {
+      width: 100%;
+      background-color: $dark-gray;
+      .icons {
+        &--plus {
+          background-color: $gray-500;
+          cursor: pointer;
+        }
+        &--send {
+          background-color: $purple;
+          cursor: pointer;
+        }
+      }
+    }
+  }
+  .textfield {
+    order: 1;
     flex: 1;
-    width: unset;
-    min-height: 0;
+    overflow: scroll;
+    width: 100%;
     height: auto;
-    overflow-y: hidden;
     overflow-x: hidden;
-    position: relative;
+    &::-webkit-scrollbar {
+      width: 3px;
+    }
+
+    /* Track */
+    &::-webkit-scrollbar-track {
+      background: transparent;
+    }
+
+    /* Handle */
+    &::-webkit-scrollbar-thumb {
+      background: $gray-500;
+    }
+    .images-container {
+      margin-bottom: 1.2rem;
+      width: 100%;
+
+      .selected-img {
+        width: 13rem;
+        height: 13rem;
+        border-radius: 2rem;
+        border: 1px solid $gray-500;
+        position: relative;
+        &:hover {
+          .delete-img {
+            opacity: 1;
+            visibility: visible;
+          }
+        }
+        .delete-img {
+          opacity: 0;
+          visibility: hidden;
+          background-color: $gray-500;
+          z-index: 10;
+          position: absolute;
+          padding: 4px;
+          border-radius: 0.4rem;
+          cursor: pointer;
+          min-width: 1.6rem;
+          min-height: 1.6rem;
+          top: 0.6rem;
+          right: 0.6rem;
+          @include flex(center, center);
+          &:hover{
+            background-color: $gray-800;
+
+          }
+        }
+        > .image {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+      }
+    }
     textarea {
+      padding: 0 6rem;
+      position: absolute;
+      bottom: 1.2rem;
+      left: 0;
+      order: 2;
       display: block;
       box-sizing: border-box;
       width: 100%;
-      height: 2.4rem;
+      height: auto;
       min-height: 2.4rem !important;
       background-color: inherit;
-      overflow-y: auto;
-      max-height: 19.8rem;
-      box-sizing: border-box; /* include padding/border in height */
-      white-space: pre-wrap; /* match real wrapping; don't toggle */
+      overflow-y: hidden;
+      box-sizing: border-box;
+      white-space: pre-wrap;
       resize: none;
       @include text($white-2, 400, $text-md);
       &::-webkit-scrollbar {
@@ -65,29 +150,31 @@
         @include text($gray-300, 400, $text-md);
       }
     }
-    &__mirror {
-      visibility: hidden;
-      position: absolute;
-      left: 0;
-      top: 0;
-      overflow: hidden;
-      white-space: pre-wrap;
-      word-break: break-word;
-      border: 1px solid transparent;
-      @include text($white-2, 400, $text-md);
-    }
   }
-  .icons {
-    border-radius: 50%;
-    padding: 1.2rem;
-    @include box(4.8rem, 4.8rem);
-    &--plus {
-      order: 1;
-      cursor: pointer;
-    }
-    &--send {
-      order: 3;
-      cursor: not-allowed;
+  &__actions {
+    position: relative;
+    left: unset;
+    bottom: unset;
+    width: 100%;
+    pointer-events: none;
+    order: 2;
+    z-index: 0;
+    height: 4.8rem;
+    @include flex(space-between, center);
+    .icons {
+      pointer-events: all;
+      border-radius: 50%;
+      padding: 1.2rem;
+      z-index: 100;
+      @include box(4.8rem, 4.8rem);
+      &--plus {
+        order: 2;
+        cursor: pointer;
+      }
+      &--send {
+        order: 4;
+        cursor: not-allowed;
+      }
     }
   }
 }
